--- a/data_scan.ipynb
+++ b/data_scan.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "submission['id'] = data_test['id']\n",
     "submission.set_index('id', inplace=True)\n",
     "\n",
-    "submission.to_csv('my_submission_{}.csv'.format(tail))"
+    "submission.to_csv('data/my_submission_{}.csv'.format(tail))"
    ]
   }
  ],
