--- a/data_scan.ipynb
+++ b/data_scan.ipynb
@@ -30,7 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\david\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\xgboost\\core.py:160: UserWarning: [17:51:33] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0b3782d1791676daf-1\\xgboost\\xgboost-ci-windows\\src\\objective\\regression_obj.cu:209: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "c:\\Users\\david\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\xgboost\\core.py:160: UserWarning: [21:17:00] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0b3782d1791676daf-1\\xgboost\\xgboost-ci-windows\\src\\objective\\regression_obj.cu:209: reg:linear is now deprecated in favor of reg:squarederror.\n",
       "  warnings.warn(smsg, UserWarning)\n"
      ]
     }
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train loss: 1.96e-02 | test loss: 1.99e-02 | reg: 1.72e+01 : 100%|██| 20/20 [16:25<00:00, 49.27s/it]\n"
+      "train loss: 1.98e-02 | test loss: 1.98e-02 | reg: 2.33e+01 : 100%|██| 20/20 [25:17<00:00, 75.88s/it]\n"
      ]
     }
    ],
@@ -71,25 +71,28 @@
     "from kan import KAN\n",
     "import torch\n",
     "\n",
-    "ntrain = 30000\n",
+    "ntrain = 50000\n",
     "ntest = 1000\n",
     "nfeat = 21\n",
+    "\n",
+    "idxs_train = np.random.choice(X.shape[0], size=ntrain)\n",
+    "idxs_test = np.random.choice(X.shape[0], size=ntest)\n",
     "\n",
     "Xtorch = torch.from_numpy(np.array(X))\n",
     "ytorch = torch.from_numpy(np.array(y)[:,None])\n",
     "\n",
     "dataset = {}\n",
-    "dataset['train_input'] = Xtorch[:ntrain,1:nfeat]\n",
-    "dataset['train_label'] = ytorch[:ntrain]\n",
-    "dataset['test_input'] = Xtorch[ntrain:ntrain+ntest,1:nfeat]\n",
-    "dataset['test_label'] = ytorch[ntrain:ntrain+ntest]\n",
+    "dataset['train_input'] = Xtorch[idxs_train,1:nfeat]\n",
+    "dataset['train_label'] = ytorch[idxs_train]\n",
+    "dataset['test_input'] = Xtorch[idxs_test,1:nfeat]\n",
+    "dataset['test_label'] = ytorch[idxs_test]\n",
     "\n",
     "def train_err():\n",
     "    return torch.mean((model(dataset['train_input'])[:,0] - dataset['train_label'][:,0]).float()**2)\n",
     "def test_err():\n",
     "    return torch.mean((model(dataset['test_input'])[:,0] - dataset['test_label'][:,0]).float()**2)\n",
     "\n",
-    "model = KAN(width=[nfeat-1,2,2,1], grid=3, k=3)\n",
+    "model = KAN(width=[nfeat-1,4,2,1], grid=3, k=3)\n",
     "model.train(dataset, opt=\"LBFGS\", steps=20, metrics=(train_err,test_err));"
    ]
   },
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
