--- a/data_scan.ipynb
+++ b/data_scan.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\david\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\xgboost\\core.py:160: UserWarning: [21:17:00] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0b3782d1791676daf-1\\xgboost\\xgboost-ci-windows\\src\\objective\\regression_obj.cu:209: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "  warnings.warn(smsg, UserWarning)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n\\nxg_reg = xgb.XGBRegressor(objective=\"reg:linear\", n_estimators=100, max_depth=10, seed=123)\\nxg_reg.fit(X,y)\\n\\nregression = xg_reg\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -40,10 +42,10 @@
     "import xgboost as xgb\n",
     "\n",
     "\n",
-    "X = data.drop(columns=['FloodProbability'])\n",
+    "X = data.drop(columns=['id','FloodProbability'])\n",
     "y = data['FloodProbability']\n",
     "\n",
-    "'''\n",
+    "\n",
     "regression = LinearRegression()\n",
     "regression.fit(X, y)\n",
     "'''\n",
@@ -51,7 +53,17 @@
     "xg_reg = xgb.XGBRegressor(objective=\"reg:linear\", n_estimators=100, max_depth=10, seed=123)\n",
     "xg_reg.fit(X,y)\n",
     "\n",
-    "regression = xg_reg"
+    "regression = xg_reg\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regression.coef_ = np.mean(regression.coef_)*np.ones(20)"
    ]
   },
   {
@@ -131,15 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "tail = datetime.datetime.now().strftime(\"%y_%m_%d-%H_%M_\")\n",
     "\n",
-    "#data_test = pd.read_csv('data/test.csv')\n",
-    "y_test = ytest.detach().numpy()[:,0] # regression.predict(data_test)\n",
+    "data_test = pd.read_csv('data/test.csv')\n",
+    "y_test = regression.predict(data_test.drop(columns=['id']))# ytest.detach().numpy()[:,0]\n",
     "\n",
     "dic = {'FloodProbability': y_test}\n",
     "submission = pd.DataFrame.from_dict(dic)\n",
@@ -148,6 +160,27 @@
     "submission.set_index('id', inplace=True)\n",
     "\n",
     "submission.to_csv('data/my_submission_{}.csv'.format(tail))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0.])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regression.coef_"
    ]
   },
   {
