naive approach does notwork

--- a/data_scan.ipynb
+++ b/data_scan.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "'\\n\\nxg_reg = xgb.XGBRegressor(objective=\"reg:linear\", n_estimators=100, max_depth=10, seed=123)\\nxg_reg.fit(X,y)\\n\\nregression = xg_reg\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### tattica ignorante\n",
+    "n, feat = X.shape\n",
+    "\n",
+    "yinv = np.log(y / (1 - y))\n",
+    "Xsums = X.sum(axis=1, numeric_only=True)\n",
+    "\n",
+    "simp_reg = LinearRegression()\n",
+    "simp_reg.fit(np.array(Xsums).reshape(-1,1), yinv)\n",
+    "\n",
+    "data_test = pd.read_csv('data/test.csv')\n",
+    "y_test_inv = simp_reg.predict(np.array(data_test.drop(columns=['id']).sum(axis=1, numeric_only=True)).reshape(-1,1))\n",
+    "y_test = 1 / (1 + np.exp(-y_test_inv))\n",
+    "\n",
+    "import datetime\n",
+    "tail = datetime.datetime.now().strftime(\"%y_%m_%d-%H_%M_\")\n",
+    "\n",
+    "dic = {'FloodProbability': y_test}\n",
+    "submission = pd.DataFrame.from_dict(dic)\n",
+    "submission.reset_index(drop=True, inplace=True)\n",
+    "submission['id'] = data_test['id']\n",
+    "submission.set_index('id', inplace=True)\n",
+    "\n",
+    "submission.to_csv('data/my_submission_{}.csv'.format(tail))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,17 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0.])"
+       "array([0.0056462, 0.0056462, 0.0056462, 0.0056462, 0.0056462, 0.0056462,\n",
+       "       0.0056462, 0.0056462, 0.0056462, 0.0056462, 0.0056462, 0.0056462,\n",
+       "       0.0056462, 0.0056462, 0.0056462, 0.0056462, 0.0056462, 0.0056462,\n",
+       "       0.0056462, 0.0056462])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
